.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

API Changes:
  
  * util-core: Removed deprecated `c.t.u.LongOverflowException`. Use
    `java.lang.ArithmeticException` instead. Removed deprecated
    `c.t.u.LongOverflowArith` and all methods on it:
        - `add`; use Java 8's `Math.addExact` instead
        - `sub`; use Java 8's `Math.subtractExact` instead
        - `mul`; use Java 8's `Math.multiplyExact` instead
    ``RB_ID=915545``

  * util-collection: Removed deprecated `c.t.u.JMapWrapper`. Use
    `scala.collection.JavaConverters` instead. ``RB_ID=915544``

  * util-eval: Removed from the project. ``RB_ID=915430``
    https://finagle.github.io/blog/2017/04/06/announce-removals/

6.43.0  2017-04-20

Runtime Behavior Changes:

  * util-core: `Closable.all(..)` will now catch synchronous exceptions thrown
    by any `Closable.close(..)` invocations, and wrap them in a failed Future.
    ``RB_ID=914859``

  * util-stats: InMemoryStatsReceiver's `gauges` member is now safe for
    concurrent iteration but now holds strong references to gauge instances.
    ``RB_ID=911951``

New Features:

  * util-core: `c.t.f.u.BufReader` and `c.t.f.u.BufWriter` have been
    moved from finagle-core to util-core and renamed to
    `c.t.io.ByteReader` and `c.t.io.ByteWriter` respectively. They
    are now also exposed publicly. ``RB_ID=911639``

API Changes:

  * util: util-zk-commons was removed, since it was only a connector between
    util and commons, which was not widely used.  ``RB_ID=910721``

  * util-core: AsyncQueue's `size` method is now final while `offer` and `fail`
    are no longer final. ``RB_ID=914191``

6.42.0  2017-03-10

New Features:

  * util-core: Promoted the positional `Buf.Indexed` API to be a first-class